--- a/static/index.html
+++ b/static/index.html
@@ -16,7 +16,14 @@
 
   <div class="container main p-5">
     <h1>HIIII</h1>
+
+    <div class="container">
+      <button class="btn btn-primary" onclick="enterQueue('Clarifier')">Clarifier</button>
+      <button class="btn btn-primary" onclick="enterQueue('NewPoint')">New Point</button>
+    </div>
   </div>
+
+  <script src="javascript/index.js"></script>
 </body>
 
 </html>
