User info on client

--- a/static/index.html
+++ b/static/index.html
@@ -11,6 +11,13 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
       <a class="navbar-brand" href="/">Circlejerk!</a>
+      <div class="nav navbar-nav ml-auto">
+        <div class="navbar-user">
+          <img id="profile-pic" />
+          <span class="text-light" id="profile-name"></span>
+          <a href="/auth/logout" style="color: #c3c3c3;"><i>(logout)</i></a>
+        </div>
+      </div>
     </div>
   </nav>
 
