formatting and reload button (includes fontawesome)

--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,7 @@
   <title>Circlejerk</title>
   <link rel="stylesheet" href="https://s3.csh.rit.edu/csh-material-bootstrap/4.3.1/dist/csh-material-bootstrap.min.css"
     media="screen">
+  <script src="https://kit.fontawesome.com/ef45124833.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -23,8 +24,11 @@
 
   <div class="container main p-5">
     <div class="card">
-      <div class="card-header">
-        <h2>Big long discussion in SWEN-261</h2>
+      <div class="card-header d-flex flex-row align-items-center">
+        <h2 class="m-0">Big long discussion in SWEN-261</h2>
+        <a href="#" class="ml-auto" onclick="rebuildQueue(); return false">
+          <i class="fa-solid fa-arrows-rotate text-muted"></i>
+        </a>
       </div>
       <ul class="list-group">
         <div class="clarifier-spacer"></div>
