--- a/static/auth.html
+++ b/static/auth.html
@@ -61,7 +61,7 @@
           </a>
         </div>
         <div class="card-body text-center mt-3 mb-4">
-          <a href="auth/login-csh">
+          <a href="auth/login-google">
             <img class="w-50 img-fluid" src="/assets/google.png" />
           </a>
         </div>
