fix favicon and title

--- a/static/auth.html
+++ b/static/auth.html
@@ -5,6 +5,7 @@
   <title>Login</title>
   <link rel="stylesheet" href="https://s3.csh.rit.edu/csh-material-bootstrap/4.6.2/dist/csh-material-bootstrap.min.css"
     media="screen">
+  <link rel="icon" href="/assets/favicon.ico">
 
   <style>
     img {
