--- a/static/index.html
+++ b/static/index.html
@@ -24,6 +24,15 @@
     .mh-0 {
       min-height: 0px;
     }
+
+    .toast-container {
+      bottom: 0px;
+      right: 0px;
+    }
+
+    .toast {
+      max-height: 80px;
+    }
   </style>
 </head>
 
@@ -70,7 +79,33 @@
         </div>
       </div>
     </div>
+  </div>
 
+  <div class="toast-container position-absolute d-flex flex-column">
+    <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+      <div class="toast-header">
+        <strong class="mr-auto">Bootstrap</strong>
+        <small>11 mins ago</small>
+        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="toast-body">
+        Hello, world! This is a toast message.
+      </div>
+    </div>
+    <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+      <div class="toast-header">
+        <strong class="mr-auto">Bootstrap 2</strong>
+        <small>11 mins ago</small>
+        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="toast-body">
+        Hello, world! This is a toast message.
+      </div>
+    </div>
   </div>
 
   <script>
